<resources>
<string name="app_name">Remedi</string>
<string name="profile">Profile</string>
<string name="add_medication">Add Medication</string>
<string name="edit_medication">Edit Medication</string>
<string name="medication_name">Medication Name</string>
<string name="medication_name_hint">e.g. Aspirin</string>
<string name="dosage">Dosage</string>
<string name="dosage_hint">2 Pills</string>
<string name="time">Time</string>
<string name="time_hint">08:00 AM</string>
<string name="instructions">Instructions</string>
<string name="instructions_hint">Take after breakfast</string>
<string name="refills_left">Refills Left</string>
<string name="refills_hint">4</string>
<string name="save_medication">Save Medication</string>
<string name="select_color">Select Color</string>
<string name="error_name_required">Name is required</string>
<string name="medication_saved">Medication Saved</string>
<string name="action_settings">Settings</string>
<!-- Strings used for fragments for navigation -->
<string name="first_fragment_label">First Fragment</string>
<string name="second_fragment_label">Second Fragment</string>
<string name="next">Next</string>
<string name="hello_blank_fragment">Hello blank fragment</string>
<string name="previous">Previous</string>
</resources>

